<resources>
    <string name="app_name">Journal App</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="name_error_message">Enter Full Name</string>
    <string name="email_error_message">Enter Valid Email</string>
    <string name="age_error_message">Enter Age</string>
    <string name="password_error_message">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="not_member">No account yet? Create one</string>
    <string name="already_member">Already a member? Login</string>
    <string name="email__exist_error_message">Email Already Exists</string>
    <string name="password_not_match">Password Does Not Matches</string>
    <string name="invalid_email_password">Wrong Email or Password</string>
    <string name="delete">Delete</string>
    <string name="sample">Example</string>
    <string name="add_new">Add New Task</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

</resources>
