<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    tools:context="activities.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/user" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userName"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userEmail"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner"
                android:hint="@string/email_hint"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textColorLink="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textColorLink="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_round"
            android:text="@string/register_text"
            android:textColor="@color/colorText" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/backToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/already_member"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
